referenciando todos os projetos do sistema

--- a/AvoanteDigital.Domain.Tests/AvoanteDigital.Domain.Tests.csproj
+++ b/AvoanteDigital.Domain.Tests/AvoanteDigital.Domain.Tests.csproj
@@ -20,4 +20,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AvoanteDigital.Domain\AvoanteDigital.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
