--- a/AvoanteDigital.Domain.Api/AvoanteDigital.Domain.Api.csproj
+++ b/AvoanteDigital.Domain.Api/AvoanteDigital.Domain.Api.csproj
@@ -7,13 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="MySqlConnector" Version="2.3.7" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AvoanteDigital.Domain\AvoanteDigital.Domain.csproj" />
-    <ProjectReference Include="..\AvoanteDigital.Domain.Infra\AvoanteDigital.Domain.Infra.csproj" />
+    <ProjectReference Include="..\AvoanteDigital.Domain.Service\AvoanteDigital.Domain.Service.csproj" />
   </ItemGroup>
 
 </Project>
