--- a/AvoanteDigital.Domain.Service/AvoanteDigital.Domain.Service.csproj
+++ b/AvoanteDigital.Domain.Service/AvoanteDigital.Domain.Service.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AvoanteDigital.Domain\AvoanteDigital.Domain.csproj" />
+    <ProjectReference Include="..\AvoanteDigital.Domain.Infra.Data\AvoanteDigital.Domain.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
