feat: implement user registration

--- a/AvoanteDigital.Domain.Infra.Data/AvoanteDigital.Domain.Infra.Data.csproj
+++ b/AvoanteDigital.Domain.Infra.Data/AvoanteDigital.Domain.Infra.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\AvoanteDigital.Domain\AvoanteDigital.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
