--- a/AvoanteDigital.Domain.Infra.CrossCutting/AvoanteDigital.Domain.Infra.CrossCutting.csproj
+++ b/AvoanteDigital.Domain.Infra.CrossCutting/AvoanteDigital.Domain.Infra.CrossCutting.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AvoanteDigital.Domain\AvoanteDigital.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
+  </ItemGroup>
+
 </Project>
