--- a/AvoanteDigital.Domain/AvoanteDigital.Domain.csproj
+++ b/AvoanteDigital.Domain/AvoanteDigital.Domain.csproj
@@ -11,4 +11,13 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.IdentityModel.Tokens">
+      <HintPath>..\..\..\..\..\.nuget\packages\microsoft.identitymodel.tokens\8.2.1\lib\net8.0\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IdentityModel.Tokens.Jwt">
+      <HintPath>..\..\..\..\..\.nuget\packages\system.identitymodel.tokens.jwt\8.2.1\lib\net8.0\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
