--- a/src/AvoanteDigital.Domain/AvoanteDigital.Domain.csproj
+++ b/src/AvoanteDigital.Domain/AvoanteDigital.Domain.csproj
@@ -13,10 +13,10 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.IdentityModel.Tokens">
-      <HintPath>..\..\..\..\..\.nuget\packages\microsoft.identitymodel.tokens\8.2.1\lib\net8.0\Microsoft.IdentityModel.Tokens.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\.nuget\packages\microsoft.identitymodel.tokens\8.2.1\lib\net8.0\Microsoft.IdentityModel.Tokens.dll</HintPath>
     </Reference>
     <Reference Include="System.IdentityModel.Tokens.Jwt">
-      <HintPath>..\..\..\..\..\.nuget\packages\system.identitymodel.tokens.jwt\8.2.1\lib\net8.0\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\.nuget\packages\system.identitymodel.tokens.jwt\8.2.1\lib\net8.0\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
   </ItemGroup>
 
